Item12346: fixed jittering cursor and scrollbars in IE8
git-svn-id: http://svn.foswiki.org/trunk@16379 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/NatEditPlugin/pub/System/NatEditPlugin/default/styles.uncompressed.css
+++ b/NatEditPlugin/pub/System/NatEditPlugin/default/styles.uncompressed.css
@@ -1,5 +1,5 @@
 /* default theme */
-.natEditToolBar { padding:0px; margin:0px 0px 3px 0px; float:left;}
+.natEditToolBar { padding:0px; margin:0px 0px 3px 0px;}
 .natEditToolBar a:hover,
 .natEditToolBar a {
   width:25px; 
